加入了串口获取

--- a/apps/gide/color.css
+++ b/apps/gide/color.css
@@ -357,3 +357,11 @@ div>span.blocklyTreeIcon.blocklyTreeIconNone{
 	background:url('../../media/mark/factory2.png') no-repeat;
 	background-size: 100% auto; 
 }
+#\:i>div>span.blocklyTreeIcon.blocklyTreeIconNone{ 
+	background:url('../../media/mark/factory.png') no-repeat;
+	background-size: 100% auto; 
+}
+#\:i>.blocklyTreeSelected>span.blocklyTreeIcon.blocklyTreeIconNone{ 
+	background:url('../../media/mark/factory2.png') no-repeat;
+	background-size: 100% auto; 
+}
